# biz-napi

./: .gitignore  .npmignore  CI-CD-SETUP.md  CLAUDE.md  Cargo.toml  README.md  TESTING.md  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  postbuild.js  tsonfig.json
.claude/: settings.json
.github/: README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: CI.yml  claude.yml  dependabot-auto-merge.yml  release.yml  test.yml
__test__/: README.md  edge-cases.test.ts  index.spec.mjs  index.test.ts  integration.test.ts  monitor.test.ts  setup.ts  sum.test.ts  types.test.ts
lib/: index.ts  monitor.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  monitor.rs
test/: test-advanced.js  test-manual.js
