[package]
edition = "2021"
name = "lie5860_biz-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
rdev = { git = "https://github.com/rustdesk-org/rdev", version = "0.5.0-2" }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
